force-app/main/default/objects/Constituent_Type_Hierarchy__mdt/Constituent_Type_Hierarchy__mdt.object-meta.xml
<CustomObject>
    <label>Constituent Type Hierarchy</label>
    <pluralLabel>Constituent Type Hierarchies</pluralLabel>
</CustomObject>