force-app/main/default/objects/Constituent_Type_Hierarchy__mdt/fields/hierarchy__c.field-meta.xml
<CustomField>
    <fullName>hierarchy__c</fullName>
    <label>hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>