force-app/main/default/objects/Constituent_Type_Hierarchy__mdt/fields/Institutional_Suffix_Hierarchy_Order__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Suffix_Hierarchy_Order__c</fullName>
    <label>Institutional Suffix Hierarchy Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>