force-app/main/default/objects/Constituent_Type_Hierarchy__mdt/fields/type_code__c.field-meta.xml
<CustomField>
    <fullName>type_code__c</fullName>
    <label>type code</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>