force-app/main/default/objects/Constituent_Type_Hierarchy__mdt/listViews/All_Records_Hierarchy.listView-meta.xml
<ListView>
    <fullName>All_Records_Hierarchy</fullName>
    <columns>MasterLabel</columns>
    <columns>type_code__c</columns>
    <columns>hierarchy__c</columns>
    <columns>Institutional_Suffix_Hierarchy_Order__c</columns>
    <columns>DeveloperName</columns>
    <filterScope>Everything</filterScope>
    <label>All Records - Hierarchy</label>
    <language>en_US</language>
</ListView>